# cw-coins

./: Cargo.toml  rustfmt.toml
src/: lib.rs
tests/: tests.rs
