[package]
name = "cw-coins"
description = "Experimental Rust/CosmWasm helper library"
version = "0.1.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/cw-coins"

[dependencies]
cosmwasm-std = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
